# DataCraft

./: .gitignore  Makefile  README.md  app.py  pyproject.toml
resources/: payment_data.csv
src/ai/: predict.py
src/datacraft/: app.py
src/model/: model.py
src/train/: train.py  training_data.csv  training_data_balanced.csv  training_data_min.csv
