[project]
name = "DataCraft"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "devsarvesh92", email = "sarveshdev92@gmail.com"},
]
dependencies = [
    "streamlit>=1.31.1",
    "torch>=2.2.1",
    "transformers>=4.38.1",
    "cd>=1.1.0",
    "scikit-learn>=1.4.1.post1",
    "boto3",
    "openai>=1.12.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
